# quickplan

./: README.md  justfile  zellij-layout.kdl
server/: Cargo.toml
server/.cargo/: config.toml
server/crates/libs/lib-core/: Cargo.toml
server/crates/libs/lib-core/sql/dev_init/: dev_seed.sql
server/crates/libs/lib-core/sql/migrations/01-create-schema/: up.sql
server/crates/libs/lib-core/src/: config.rs
server/crates/libs/lib-core/src/_dev_utils/: dev_db.rs  mod.rs  pop.rs
server/crates/libs/lib-core/src/ctx/: mod.rs
server/crates/libs/lib-core/src/model/: TODO.md  base.rs  error.rs  fields.rs  mod.rs  plan.rs  plandate.rs  user.rs  user_date.rs
server/crates/libs/lib-core/src/model/base/: crud_fns.rs  mod.rs  utils.rs
server/crates/libs/lib-core/src/model/store/: error.rs  mod.rs
server/crates/libs/lib-html/: Cargo.toml  askama.toml  build.rs
server/crates/libs/lib-html/src/: calendar_utils.rs  lib.rs  plan_template.rs
server/crates/libs/lib-html/templates/: about.html  calendar.html  homepage.html  not_found.html  page.html  plan.html  test_calendar.html  test_response.html  user_created_response.html
server/crates/libs/lib-utils/: Cargo.toml
server/crates/libs/lib-utils/src/: lib.rs  time.rs  url_id.rs
server/crates/libs/utils/: Cargo.toml
server/crates/libs/utils/src/: b64u.rs  envs.rs  lib.rs  time.rs
server/crates/services/web-server/: Cargo.toml  README.md
server/crates/services/web-server/src/: config.rs  main.rs
server/crates/services/web-server/src/log/: mod.rs
server/crates/services/web-server/src/web/: error.rs  mod.rs  mw_ctx_resolver.rs  mw_html_strip.rs  mw_request_stamp.rs  mw_res_map.rs  plan_routes.rs  routes.rs  routes_static.rs  user_routes.rs
server/crates/tools/gen-key/: Cargo.toml
server/crates/tools/gen-key/src/: main.rs
server/sql/dev_init/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
server/www/: main.css  package.json  script-twind.js  style.css  tailwind.config.cjs
server/www/styles/: tailwind.css
