[workspace.lints.rust]
unsafe_code = "forbid"
unused = "allow"       # For experimental dev.

[workspace]
resolver = "2"
members = [
    # -- Application libraries
    "crates/libs/utils",

    # -- Application Services
    "crates/services/web-server",

    # -- Tools
    "crates/tools/gen-key",

]
