[workspace.lints.rust]
unsafe_code = "forbid"

[workspace]
resolver = "2"
members = [
    # -- Application libraries
    "crates/libs/lib-utils",
    "crates/libs/lib-core",
    "crates/libs/lib-html",

    # -- Application Services
    "crates/services/web-server",

    # -- Tools
    "crates/tools/gen-key",

]

[workspace.dependencies]
derive_more = { version = "1.0.0-beta", features = ["from", "display"] }
