[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }
# -- Data
sqlx = { version = "0.7", features = [
    "macros",
    "runtime-tokio",
    "postgres",
    "uuid",
] }
# -- Tracing
tracing = "0.1"
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
derive_more = { workspace = true }
