[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# -- App Libs
lib-utils = { path = "../../libs/lib-utils" }
# -- Async
tokio = { version = "1", features = ["full"] }
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["time_0_3"] }

# -- Data
sea-query = { version = "0.31.0-rc.4", features = ["with-json"] }
sea-query-rusqlite = { version = "0.6.0-rc", features = ["with-json"] }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
#rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
modql = { version = "0.4.0-rc", features = ["with-sea-query", "with-rusqlite"] }

# -- Tracing
tracing = "0.1"
# -- Others
uuid = { version = "1", features = ["v4", "fast-rng"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
derive_more = { workspace = true }

[dev-dependencies]
anyhow = "1"
