[package]
name = "lib-html"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
maud = { version = "0.26", features = ["axum"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4"
axum = "0.7"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
